--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/site-ha-disabled-leaf.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/site-ha-disabled-leaf.yml
@@ -50,21 +50,21 @@ router_bgp:
     - ip_address: 172.17.0.1
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge_Ethernet52.100_vrf_IT
+      description: cv-pathfinder-edge_Ethernet52.1000_vrf_IT
     - ip_address: 172.17.0.3
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge-no-common-path-group_Ethernet52.100_vrf_IT
-    rd: 192.168.45.4:100
+      description: cv-pathfinder-edge-no-common-path-group_Ethernet52.1000_vrf_IT
+    rd: 192.168.45.4:1000
     route_targets:
       import:
       - address_family: evpn
         route_targets:
-        - 100:100
+        - 1000:1000
       export:
       - address_family: evpn
         route_targets:
-        - 100:100
+        - 1000:1000
     redistribute_routes:
     - source_protocol: connected
   - name: PROD
@@ -73,21 +73,44 @@ router_bgp:
     - ip_address: 172.17.0.1
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge_Ethernet52.42_vrf_PROD
+      description: cv-pathfinder-edge_Ethernet52.142_vrf_PROD
     - ip_address: 172.17.0.3
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge-no-common-path-group_Ethernet52.42_vrf_PROD
-    rd: 192.168.45.4:42
+      description: cv-pathfinder-edge-no-common-path-group_Ethernet52.142_vrf_PROD
+    rd: 192.168.45.4:142
     route_targets:
       import:
       - address_family: evpn
         route_targets:
-        - '42:42'
+        - 142:142
       export:
       - address_family: evpn
         route_targets:
-        - '42:42'
+        - 142:142
+    redistribute_routes:
+    - source_protocol: connected
+  - name: ATTRACTED-VRF-FROM-UPLINK
+    router_id: 192.168.45.4
+    neighbors:
+    - ip_address: 172.17.0.1
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: cv-pathfinder-edge_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+    - ip_address: 172.17.0.3
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: cv-pathfinder-edge-no-common-path-group_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+    rd: 192.168.45.4:666
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 666:666
+      export:
+      - address_family: evpn
+        route_targets:
+        - 666:666
     redistribute_routes:
     - source_protocol: connected
   - name: default
@@ -122,6 +145,14 @@ router_bgp:
       - 1101:1101
     redistribute_routes:
     - learned
+  - id: 666
+    tenant: TenantC
+    rd: 192.168.45.4:1666
+    route_targets:
+      both:
+      - 1666:1666
+    redistribute_routes:
+    - learned
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
@@ -138,6 +169,9 @@ vrfs:
 - name: PROD
   tenant: TenantA
   ip_routing: true
+- name: ATTRACTED-VRF-FROM-UPLINK
+  tenant: TenantC
+  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
@@ -152,26 +186,37 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 172.17.0.0/31
-- name: Ethernet1.100
+- name: Ethernet1.1000
   peer: cv-pathfinder-edge
-  peer_interface: Ethernet52.100
+  peer_interface: Ethernet52.1000
   peer_type: wan_router
   vrf: IT
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.100_vrf_IT
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.1000_vrf_IT
   shutdown: false
   type: l3dot1q
-  encapsulation_dot1q_vlan: 100
+  encapsulation_dot1q_vlan: 1000
   mtu: 9214
   ip_address: 172.17.0.0/31
-- name: Ethernet1.42
+- name: Ethernet1.142
   peer: cv-pathfinder-edge
-  peer_interface: Ethernet52.42
+  peer_interface: Ethernet52.142
   peer_type: wan_router
   vrf: PROD
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.42_vrf_PROD
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.142_vrf_PROD
   shutdown: false
   type: l3dot1q
-  encapsulation_dot1q_vlan: 42
+  encapsulation_dot1q_vlan: 142
+  mtu: 9214
+  ip_address: 172.17.0.0/31
+- name: Ethernet1.666
+  peer: cv-pathfinder-edge
+  peer_interface: Ethernet52.666
+  peer_type: wan_router
+  vrf: ATTRACTED-VRF-FROM-UPLINK
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 666
   mtu: 9214
   ip_address: 172.17.0.0/31
 - name: Ethernet2
@@ -183,26 +228,37 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 172.17.0.2/31
-- name: Ethernet2.100
+- name: Ethernet2.1000
   peer: cv-pathfinder-edge-no-common-path-group
-  peer_interface: Ethernet52.100
+  peer_interface: Ethernet52.1000
   peer_type: wan_router
   vrf: IT
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.100_vrf_IT
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.1000_vrf_IT
   shutdown: false
   type: l3dot1q
-  encapsulation_dot1q_vlan: 100
+  encapsulation_dot1q_vlan: 1000
   mtu: 9214
   ip_address: 172.17.0.2/31
-- name: Ethernet2.42
+- name: Ethernet2.142
   peer: cv-pathfinder-edge-no-common-path-group
-  peer_interface: Ethernet52.42
+  peer_interface: Ethernet52.142
   peer_type: wan_router
   vrf: PROD
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.42_vrf_PROD
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.142_vrf_PROD
   shutdown: false
   type: l3dot1q
-  encapsulation_dot1q_vlan: 42
+  encapsulation_dot1q_vlan: 142
+  mtu: 9214
+  ip_address: 172.17.0.2/31
+- name: Ethernet2.666
+  peer: cv-pathfinder-edge-no-common-path-group
+  peer_interface: Ethernet52.666
+  peer_type: wan_router
+  vrf: ATTRACTED-VRF-FROM-UPLINK
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 666
   mtu: 9214
   ip_address: 172.17.0.2/31
 loopback_interfaces:
@@ -240,6 +296,9 @@ vlans:
 - id: 101
   name: VLAN101
   tenant: TenantA
+- id: 666
+  name: VLAN666
+  tenant: TenantC
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:1c:73:00:00:01
@@ -250,6 +309,13 @@ vlan_interfaces:
   shutdown: true
   ip_address_virtual: 10.0.100.1/24
   vrf: PROD
+- name: Vlan666
+  tenant: TenantC
+  description: VLAN666
+  shutdown: true
+  ip_address: 10.66.66.1
+  ip_address_virtual: 10.66.66.66/24
+  vrf: ATTRACTED-VRF-FROM-UPLINK
 vxlan_interface:
   Vxlan1:
     description: site-ha-disabled-leaf_VTEP
@@ -261,10 +327,14 @@ vxlan_interface:
         vni: 1100
       - id: 101
         vni: 1101
+      - id: 666
+        vni: 1666
       vrfs:
       - name: default
         vni: 1
       - name: IT
-        vni: 100
+        vni: 1000
       - name: PROD
-        vni: 42
+        vni: 142
+      - name: ATTRACTED-VRF-FROM-UPLINK
+        vni: 666
