--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -4989,6 +4989,27 @@ $defs:
                   to avoid overlap.
 
                   '
+              wan_vni:
+                type: int
+                convert_types:
+                - str
+                min: 1
+                max: 255
+                description: 'Required for VRFs carried over AutoVPN or CV Pathfinder
+                  WAN.
+
+
+                  A VRF can have a different VNI in the Datacenters and in the WAN.
+
+                  Note that if no VRF default is configured for WAN, AVD will automatically
+                  inject the VRF default with
+
+                  `wan_vni` set to `1`.
+
+                  In addition either `vrf_id` or `vrf_vni` must be set to enforce
+                  consistant route-targets across domains.
+
+                  '
               vrf_id:
                 type: int
                 convert_types:
