--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -147,6 +147,8 @@ spanning-tree mode none
 no enable password
 no aaa root
 !
+vrf instance ATTRACTED-VRF-FROM-UPLINK
+!
 vrf instance IT
 !
 vrf instance MGMT
@@ -209,19 +211,27 @@ interface Ethernet52
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.17.0.5/31
 !
-interface Ethernet52.42
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.42_vrf_PROD
+interface Ethernet52.142
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.142_vrf_PROD
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 42
+   encapsulation dot1q vlan 142
    vrf PROD
    ip address 172.17.0.5/31
 !
-interface Ethernet52.100
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.100_vrf_IT
+interface Ethernet52.666
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 100
+   encapsulation dot1q vlan 666
+   vrf ATTRACTED-VRF-FROM-UPLINK
+   ip address 172.17.0.5/31
+!
+interface Ethernet52.1000
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.1000_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 1000
    vrf IT
    ip address 172.17.0.5/31
 !
@@ -233,19 +243,27 @@ interface Ethernet53
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.17.0.7/31
 !
-interface Ethernet53.42
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.42_vrf_PROD
+interface Ethernet53.142
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.142_vrf_PROD
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 42
+   encapsulation dot1q vlan 142
    vrf PROD
    ip address 172.17.0.7/31
 !
-interface Ethernet53.100
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.100_vrf_IT
+interface Ethernet53.666
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 100
+   encapsulation dot1q vlan 666
+   vrf ATTRACTED-VRF-FROM-UPLINK
+   ip address 172.17.0.7/31
+!
+interface Ethernet53.1000
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.1000_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 1000
    vrf IT
    ip address 172.17.0.7/31
 !
@@ -258,6 +276,7 @@ interface Vxlan1
    description cv-pathfinder-edge2A_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
+   vxlan vrf ATTRACTED-VRF-FROM-UPLINK vni 166
    vxlan vrf default vni 1
    vxlan vrf IT vni 100
    vxlan vrf PROD vni 42
@@ -306,6 +325,7 @@ application traffic recognition
       42
 !
 ip routing
+ip routing vrf ATTRACTED-VRF-FROM-UPLINK
 ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
@@ -425,6 +445,19 @@ router bgp 65000
       bgp additional-paths send any
       neighbor WAN-OVERLAY-PEERS activate
    !
+   vrf ATTRACTED-VRF-FROM-UPLINK
+      rd 192.168.42.2:666
+      route-target import evpn 666:666
+      route-target export evpn 666:666
+      router-id 192.168.42.2
+      neighbor 172.17.0.4 remote-as 65199
+      neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+      neighbor 172.17.0.6 remote-as 65199
+      neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+      redistribute connected
+   !
    vrf default
       rd 192.168.42.2:1
       route-target import evpn 1:1
@@ -432,29 +465,29 @@ router bgp 65000
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
    !
    vrf IT
-      rd 192.168.42.2:100
-      route-target import evpn 100:100
-      route-target export evpn 100:100
+      rd 192.168.42.2:1000
+      route-target import evpn 1000:1000
+      route-target export evpn 1000:1000
       router-id 192.168.42.2
       neighbor 172.17.0.4 remote-as 65199
       neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1.100_vrf_IT
+      neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1.1000_vrf_IT
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.100_vrf_IT
+      neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.1000_vrf_IT
       redistribute connected
    !
    vrf PROD
-      rd 192.168.42.2:42
-      route-target import evpn 42:42
-      route-target export evpn 42:42
+      rd 192.168.42.2:142
+      route-target import evpn 142:142
+      route-target export evpn 142:142
       router-id 192.168.42.2
       neighbor 172.17.0.4 remote-as 65199
       neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1.42_vrf_PROD
+      neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1.142_vrf_PROD
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.42_vrf_PROD
+      neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.142_vrf_PROD
       redistribute connected
 !
 router traffic-engineering
