--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/site-ha-enabled-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/site-ha-enabled-leaf1.cfg
@@ -17,6 +17,11 @@ vlan 100
 vlan 101
    name VLAN101
 !
+vlan 666
+   name VLAN666
+!
+vrf instance ATTRACTED-VRF-FROM-UPLINK
+!
 vrf instance IT
 !
 vrf instance MGMT
@@ -30,19 +35,27 @@ interface Ethernet1
    no switchport
    ip address 172.17.0.0/31
 !
-interface Ethernet1.42
-   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52.42_vrf_PROD
+interface Ethernet1.142
+   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52.142_vrf_PROD
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 42
+   encapsulation dot1q vlan 142
    vrf PROD
    ip address 172.17.0.0/31
 !
-interface Ethernet1.100
-   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52.100_vrf_IT
+interface Ethernet1.666
+   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 100
+   encapsulation dot1q vlan 666
+   vrf ATTRACTED-VRF-FROM-UPLINK
+   ip address 172.17.0.0/31
+!
+interface Ethernet1.1000
+   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52.1000_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 1000
    vrf IT
    ip address 172.17.0.0/31
 !
@@ -53,19 +66,27 @@ interface Ethernet2
    no switchport
    ip address 172.17.0.2/31
 !
-interface Ethernet2.42
-   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52.42_vrf_PROD
+interface Ethernet2.142
+   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52.142_vrf_PROD
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 42
+   encapsulation dot1q vlan 142
    vrf PROD
    ip address 172.17.0.2/31
 !
-interface Ethernet2.100
-   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52.100_vrf_IT
+interface Ethernet2.666
+   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 100
+   encapsulation dot1q vlan 666
+   vrf ATTRACTED-VRF-FROM-UPLINK
+   ip address 172.17.0.2/31
+!
+interface Ethernet2.1000
+   description P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52.1000_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 1000
    vrf IT
    ip address 172.17.0.2/31
 !
@@ -85,19 +106,28 @@ interface Vlan100
    vrf PROD
    ip address virtual 10.0.100.1/24
 !
+interface Vlan666
+   description VLAN666
+   shutdown
+   vrf ATTRACTED-VRF-FROM-UPLINK
+   ip address virtual 10.66.66.66/24
+!
 interface Vxlan1
    description site-ha-enabled-leaf1_VTEP
    vxlan source-interface Loopback1
    vxlan udp-port 4789
    vxlan vlan 100 vni 1100
    vxlan vlan 101 vni 1101
+   vxlan vlan 666 vni 1666
+   vxlan vrf ATTRACTED-VRF-FROM-UPLINK vni 666
    vxlan vrf default vni 1
-   vxlan vrf IT vni 100
-   vxlan vrf PROD vni 42
+   vxlan vrf IT vni 1000
+   vxlan vrf PROD vni 142
 !
 ip virtual-router mac-address 00:1c:73:00:00:01
 !
 ip routing
+ip routing vrf ATTRACTED-VRF-FROM-UPLINK
 ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
@@ -144,6 +174,11 @@ router bgp 65199
       route-target both 1101:1101
       redistribute learned
    !
+   vlan 666
+      rd 192.168.45.1:1666
+      route-target both 1666:1666
+      redistribute learned
+   !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
    !
@@ -151,35 +186,48 @@ router bgp 65199
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
    !
+   vrf ATTRACTED-VRF-FROM-UPLINK
+      rd 192.168.45.1:666
+      route-target import evpn 666:666
+      route-target export evpn 666:666
+      router-id 192.168.45.1
+      neighbor 172.17.0.1 remote-as 65000
+      neighbor 172.17.0.1 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.1 description cv-pathfinder-transit1A_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+      neighbor 172.17.0.3 remote-as 65000
+      neighbor 172.17.0.3 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.3 description cv-pathfinder-transit1B_Ethernet52.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+      redistribute connected
+   !
    vrf default
       rd 192.168.45.1:1
       route-target import evpn 1:1
       route-target export evpn 1:1
    !
    vrf IT
-      rd 192.168.45.1:100
-      route-target import evpn 100:100
-      route-target export evpn 100:100
+      rd 192.168.45.1:1000
+      route-target import evpn 1000:1000
+      route-target export evpn 1000:1000
       router-id 192.168.45.1
       neighbor 172.17.0.1 remote-as 65000
       neighbor 172.17.0.1 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.1 description cv-pathfinder-transit1A_Ethernet52.100_vrf_IT
+      neighbor 172.17.0.1 description cv-pathfinder-transit1A_Ethernet52.1000_vrf_IT
       neighbor 172.17.0.3 remote-as 65000
       neighbor 172.17.0.3 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.3 description cv-pathfinder-transit1B_Ethernet52.100_vrf_IT
+      neighbor 172.17.0.3 description cv-pathfinder-transit1B_Ethernet52.1000_vrf_IT
       redistribute connected
    !
    vrf PROD
-      rd 192.168.45.1:42
-      route-target import evpn 42:42
-      route-target export evpn 42:42
+      rd 192.168.45.1:142
+      route-target import evpn 142:142
+      route-target export evpn 142:142
       router-id 192.168.45.1
       neighbor 172.17.0.1 remote-as 65000
       neighbor 172.17.0.1 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.1 description cv-pathfinder-transit1A_Ethernet52.42_vrf_PROD
+      neighbor 172.17.0.1 description cv-pathfinder-transit1A_Ethernet52.142_vrf_PROD
       neighbor 172.17.0.3 remote-as 65000
       neighbor 172.17.0.3 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.3 description cv-pathfinder-transit1B_Ethernet52.42_vrf_PROD
+      neighbor 172.17.0.3 description cv-pathfinder-transit1B_Ethernet52.142_vrf_PROD
       redistribute connected
 !
 management api http-commands
