--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -58,17 +58,17 @@ router_bgp:
     - ip_address: 172.17.0.0
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65199'
-      description: site-ha-disabled-leaf_Ethernet1.100_vrf_IT
-    rd: 192.168.42.1:100
+      description: site-ha-disabled-leaf_Ethernet1.1000_vrf_IT
+    rd: 192.168.42.1:1000
     route_targets:
       import:
       - address_family: evpn
         route_targets:
-        - 100:100
+        - 1000:1000
       export:
       - address_family: evpn
         route_targets:
-        - 100:100
+        - 1000:1000
     redistribute_routes:
     - source_protocol: connected
   - name: PROD
@@ -77,17 +77,36 @@ router_bgp:
     - ip_address: 172.17.0.0
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65199'
-      description: site-ha-disabled-leaf_Ethernet1.42_vrf_PROD
-    rd: 192.168.42.1:42
+      description: site-ha-disabled-leaf_Ethernet1.142_vrf_PROD
+    rd: 192.168.42.1:142
     route_targets:
       import:
       - address_family: evpn
         route_targets:
-        - '42:42'
+        - 142:142
       export:
       - address_family: evpn
         route_targets:
-        - '42:42'
+        - 142:142
+    redistribute_routes:
+    - source_protocol: connected
+  - name: ATTRACTED-VRF-FROM-UPLINK
+    router_id: 192.168.42.1
+    neighbors:
+    - ip_address: 172.17.0.0
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65199'
+      description: site-ha-disabled-leaf_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+    rd: 192.168.42.1:666
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 666:666
+      export:
+      - address_family: evpn
+        route_targets:
+        - 666:666
     redistribute_routes:
     - source_protocol: connected
   - name: default
@@ -142,6 +161,9 @@ vrfs:
 - name: PROD
   tenant: TenantA
   ip_routing: true
+- name: ATTRACTED-VRF-FROM-UPLINK
+  tenant: TenantC
+  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
@@ -158,26 +180,37 @@ ethernet_interfaces:
   ip_address: 172.17.0.1/31
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
-- name: Ethernet52.100
+- name: Ethernet52.1000
   peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1.100
+  peer_interface: Ethernet1.1000
   peer_type: l3leaf
   vrf: IT
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.100_vrf_IT
+  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.1000_vrf_IT
   shutdown: false
   type: l3dot1q
-  encapsulation_dot1q_vlan: 100
+  encapsulation_dot1q_vlan: 1000
   mtu: 9214
   ip_address: 172.17.0.1/31
-- name: Ethernet52.42
+- name: Ethernet52.142
   peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1.42
+  peer_interface: Ethernet1.142
   peer_type: l3leaf
   vrf: PROD
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.42_vrf_PROD
+  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.142_vrf_PROD
   shutdown: false
   type: l3dot1q
-  encapsulation_dot1q_vlan: 42
+  encapsulation_dot1q_vlan: 142
+  mtu: 9214
+  ip_address: 172.17.0.1/31
+- name: Ethernet52.666
+  peer: site-ha-disabled-leaf
+  peer_interface: Ethernet1.666
+  peer_type: l3leaf
+  vrf: ATTRACTED-VRF-FROM-UPLINK
+  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 666
   mtu: 9214
   ip_address: 172.17.0.1/31
 - name: Ethernet1
@@ -573,6 +606,8 @@ vxlan_interface:
         vni: 100
       - name: PROD
         vni: 42
+      - name: ATTRACTED-VRF-FROM-UPLINK
+        vni: 166
 metadata:
   cv_tags:
     device_tags:
